cart deletion solved
